Feature/ast 12643 sca panel (#114)
* build new SCA panel

* scaPackage mapping changes

* chages on vulnerability paths

* changes to sca

* changes after review

* hover on vulnerability paths

* sca remediation
clickable label

* Add quick fix per file and for all files, fix references spacing

* Use org credentials for scan

* disable CVE grouping

* remove fail tenant test as it no longer applies

* UI test

* Fix groupBy test

* Update IDE dev version

* Resize the toolbar

* Resize the toolbar; only find severity and state lists once

* Try wrapping title of result

* Move mouse when pressing file navigation

* Double click when pressing file navigation

* Find tree on each navigation to avoid blocking

* Keep findall result instead of repeating find

* Only navigate to HIGH if severity is active

Co-authored-by: Diogo Pimenta <diogo.pimenta@checkmarx.com>