@@ -15,9 +15,11 @@ public enum GroupBy {
     SEVERITY,
     STATE,
     FILE,
-    VULNERABILITY_TYPE_NAME;
+    VULNERABILITY_TYPE_NAME,
+    PACKAGE;
 
-    public static final List<GroupBy> DEFAULT_GROUP_BY = Arrays.asList(SEVERITY, VULNERABILITY_TYPE_NAME);
+    public static final List<GroupBy> DEFAULT_GROUP_BY = Arrays.asList(SEVERITY, VULNERABILITY_TYPE_NAME, PACKAGE);
+    public static final List<GroupBy> HIDDEN_GROUPS = List.of(PACKAGE);
 
     /**
      * @return function to apply to a result for getting the parent, that matches the filter
@@ -27,17 +29,16 @@ public enum GroupBy {
             return Result::getSeverity;
         }
         if (this == VULNERABILITY_TYPE_NAME) {
-            return (result) -> result.getData().getQueryName() != null
-                               ? result.getData().getQueryName()
-                               : result.getId();
+            return (result) -> result.getData().getQueryName();
         }
         if (this == FILE) {
-            return (result) -> result.getData().getFileName() != null
-                    ? result.getData().getFileName()
-                    : result.getId();
+            return (result) -> result.getData().getFileName();
         }
         if (this == STATE) {
             return Result::getState;
+        }
+        if (this == PACKAGE) {
+            return (result) -> result.getData().getPackageIdentifier();
         }
         throw new RuntimeException("Invalid filter");
     }
@@ -56,6 +57,9 @@ public enum GroupBy {
             return String::compareTo;
         }
         if (this == FILE) {
+            return String::compareTo;
+        }
+        if (this == PACKAGE) {
             return String::compareTo;
         }
         return null;
